Day 14: Production validation complete, financial engine hardened, Docker reproducible, README aligned